👷🍁 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <h1>Digital Roses</h1>
+    <h1>Digital Flowers</h1>
     
   
     <!-- include the Glitch button to show what the webpage is about and
