--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <!-- import the webpage's javascript file -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-    <script src="script.js" defer></script>
+    <script src="/script.js" defer></script>
   </head>  
   <body>
     <h1>Digital Flowers</h1>
