Add styles, and also a button to create flowers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Digital Flowers</title>
+    <title>Flores Digitales</title>
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
@@ -15,7 +15,7 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-    <h1>Digital Flowers</h1>
+    <h1>Flores Digitales</h1>
     
   
     <!-- include the Glitch button to show what the webpage is about and
