--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Flores Digitales</title>
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     
     <!-- import the webpage's javascript file -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-    <script src="/script.js" defer></script>
+    <script src="script.js" defer></script>
   </head>  
   <body>
     <h1>Flores Digitales</h1>
